# doge-predictor

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  SESSION_HANDOFF.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: launch.json
config/: doge_settings.yaml  prometheus.yml  rl_config.yaml  settings.yaml
models/: feature_columns.json  regime_config.yaml  scaler.pkl
models/ensemble/: ensemble_metadata.json  ensemble_model.pkl
models/lstm/: lstm_metadata.json  lstm_model.pt
models/xgb_global/: xgb_metadata.json  xgb_model.json
scripts/: bootstrap_doge.py  create_tables.sql  label_regimes.py  qg01_verify.py  qg03_verify.py  qg04_verify.py  qg05_verify.py  qg05_xgb_sanity.py  qg06_verify.py  qg07_verify.py  qg08_verify.py  qg09_verify.py  qg_backtest_verify.py  rl_sim_7d.py  rollback.py  run_bootstrap_sqlite.py  serve.py  train.py
src/: __init__.py  config.py
src/dashboard/: app.py
src/evaluation/: __init__.py  backtest.py  metrics.py  reporter.py
src/features/: __init__.py  doge_specific.py  funding_features.py  htf_features.py  lag_features.py  orderbook_features.py  pipeline.py  price_indicators.py  volume_indicators.py
src/inference/: __init__.py  engine.py  signal.py
src/ingestion/: __init__.py  bootstrap.py  exceptions.py  futures_client.py  multi_symbol.py  rest_client.py  scheduler.py  ws_client.py
src/models/: __init__.py  base_model.py  ensemble.py  lstm_model.py  regime_router.py  xgb_model.py
src/monitoring/: __init__.py  alerting.py  drift_detector.py  health_check.py  prometheus_metrics.py  regime_monitor.py
src/processing/: __init__.py  aligner.py  cleaner.py  df_schemas.py  schemas.py  storage.py  validator.py
src/regimes/: __init__.py  classifier.py  detector.py  features.py
src/rl/: __init__.py  curriculum.py  predictor.py  replay_buffer.py  reward.py  rl_monitor.py  rl_trainer.py  verifier.py
src/training/: __init__.py  hyperopt.py  regime_trainer.py  scaler.py  trainer.py  walk_forward.py
src/utils/: helpers.py  logger.py
tests/: conftest.py
tests/integration/: test_ingestion_pipeline.py  test_pipeline_integration.py  test_rl_pipeline.py
tests/unit/: test_alerting.py  test_aligner.py  test_backtest.py  test_bootstrap.py  test_cleaner.py  test_curriculum.py  test_doge_features.py  test_ensemble.py  test_funding_features.py  test_health_check.py  test_helpers.py  test_htf_features.py  test_inference_engine.py  test_logger.py  test_lstm_model.py  test_pipeline.py  test_predictor.py  test_price_indicators.py  test_regime_classifier.py  (+11 more)
(+13 files in other folders)
